Revamped portfolio into react, tailwind, typescript instead of html, css, javascript

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,18 @@
+@import "tailwindcss/preflight";
+@tailwind utilities;
+
+
+@layer utilities {
+  .animate-blink {
+    animation: blink 1s steps(2, start) infinite;
+  }
+}
+
+@keyframes blink {
+  to {
+    visibility: hidden;
+  }
+}
 @import "tailwindcss";
 
 :root {
